[tool.poetry]
name = "pymispwarninglists"
version = "1.2"
description = "Python API for the MISP warning lists."
authors = ["Raphaël Vinot <raphael.vinot@circl.lu>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/MISP/PyMISPWarningLists/"

classifiers=[
    'License :: OSI Approved :: BSD License',
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Programming Language :: Python',
    'Topic :: Security',
    'Topic :: Internet',
]

include = ["pymispwarninglists/data/misp-warninglists/schema.json",
           "pymispwarninglists/data/misp-warninglists/lists/*/*.json"]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
coveralls = "^3.0"
codecov = "^2.0.22"
jsonschema = "^3.2.0"
mypy = "^0.931"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry_core>=1.0", "setuptools"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
python_version = 3.8
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
