[project]
name = "pymispwarninglists"
version = "1.6.1"
description = "Python API for the MISP warning lists."
authors = [{name="Raphaël Vinot", email="raphael.vinot@circl.lu"}]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.9"

dynamic = [ "classifiers" ]

[project.urls]
repository = "https://github.com/MISP/PyMISPWarningLists/"

[tool.poetry]
classifiers=[
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Telecommunications Industry',
    'Topic :: Security',
    'Topic :: Internet',
]

exclude = ["pymispwarninglists/data"]
include = [
    {path = "pymispwarninglists/data/misp-warninglists/schema.json", format = ["sdist", "wheel"]},
    {path = "pymispwarninglists/data/misp-warninglists/lists/*/*.json" , format = ["sdist", "wheel"]}
]

[project.optional-dependencies]
fetch_lists = ["requests (>=2.32.3)"]

[tool.poetry.group.dev.dependencies]
jsonschema = "^4.23.0"
mypy = "^1.15.0"
pytest-cov = "^6.0.0"
types-requests = "^2.32.0.20241016"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_any_generics = true
python_version = 3.9
ignore_errors = false
ignore_missing_imports = false
strict_optional = true
no_implicit_optional = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true

show_error_context = true
pretty = true
